@@ -24,7 +24,8 @@ http://www.hdiv.org/schema/hdiv http://www.hdiv.org/schema/hdiv/hdiv.xsd">
 
 	<hdiv:config confidentiality="true" avoidCookiesIntegrity="true"
 		protectedExtensions=".*,aaa" excludedExtensions="css,png" errorPage="proba.jsp"
-		randomName="true" strategy="memory" maxPagesPerSession="20">
+		randomName="true" strategy="memory" maxPagesPerSession="20"
+		showErrorPageOnEditableValidation="true">
 		<hdiv:startPages>page1,page2</hdiv:startPages>
 		<hdiv:startPages method="get">/login.html,/logout.html</hdiv:startPages>
 		<hdiv:startParameters>parameter1,parameter2</hdiv:startParameters>
